Update alignment and reveal logic of fields’ comment buttons. Fix #9025 (#9164)

--- a/client/scss/components/_chooser.scss
+++ b/client/scss/components/_chooser.scss
@@ -1,4 +1,8 @@
 .chooser {
+  // Add space to the end for hoverable area to extend outside of the field without impacting layout
+  padding-inline-end: theme('spacing.8');
+  margin-inline-end: calc(0 - theme('spacing.8'));
+
   &.blank .chosen {
     display: none;
   }
@@ -78,8 +82,9 @@
   @media (hover: hover) {
     opacity: 0;
 
-    .chooser:hover &,
-    .chooser:focus-within & {
+    // Ensure the hovering over the comment icon will still show chooser actions for these specific ones
+    :is(.w-field--admin_task_chooser, .w-field--admin_page_chooser, .w-field--document_chooser_widget, .w-field--admin_image_chooser, .w-field--admin_snippet_chooser):is(:hover, :focus-within)
+      & {
       opacity: 1;
     }
   }
@@ -90,4 +95,15 @@
   max-height: 140px;
   height: auto;
   width: auto;
+}
+
+// Display these as inline block so that action icons such as comments can appear as close as possible
+// We remove the padding here to let the chooser itself handle the padding
+.w-field--admin_task_chooser,
+.w-field--admin_page_chooser,
+.w-field--document_chooser_widget,
+.w-field--admin_image_chooser,
+.w-field--admin_snippet_chooser {
+  display: inline-block;
+  padding-inline-end: 0;
 }
